OpenColorIO: use Natron's workaround for parsing LUTs on localized systems

BUG: 407921
(cherry picked from commit 49eae9041fe56f12296fe4f0692cc31006c1c16f)