plugins/dockers/lut/ocio_display_filter_vfx2020.cpp
@@ -28,6 +28,8 @@
 #define GL_RGB16F_ARB GL_RGB16F_EXT
 #endif
 
+#include "kis_context_thread_locale.h"
+
 OcioDisplayFilter::OcioDisplayFilter(KisExposureGammaCorrectionInterface *interface, QObject *parent)
     : KisDisplayFilter(parent)
     , inputColorSpaceName(0)
@@ -241,6 +243,7 @@ void OcioDisplayFilter::updateProcessor()
     }
 
     try {
+        AutoSetAndRestoreThreadLocale l;
         m_processor = config->getProcessor(transform);
     } catch (OCIO::Exception &e) {
         // XXX: How to not break the OCIO shader now?
